--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     compile("io.micronaut:micronaut-http-server-netty:$micronautVersion")
     runtime "ch.qos.logback:logback-classic:1.2.3"
 
+    // uncomment the following to restore Spring Boot as the application executor
+//    runtime("org.springframework.boot:spring-boot-starter-tomcat")
+//    runtime 'javax.servlet:javax.servlet-api:4.0.0'
+
     testCompile("io.micronaut:micronaut-http-client:$micronautVersion")
     testCompile("io.micronaut.test:micronaut-test-junit5:1.0.0.RC2")
     testCompile "io.micronaut:micronaut-inject-java:$micronautVersion"
