Improve Spring MVC compatibility, add documentation

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ groovyVersion=2.5.3
 grailsVersion=3.2.9
 springVersion=5.1.2.RELEASE
 springBootVersion=2.1.0.RELEASE
-title=Micronaut Spring
+title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring 
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
@@ -14,3 +14,6 @@ spockVersion=1.2-groovy-2.5
 developers=Graeme Rocher
 # Not really needed for this project, but anyway
 kafkaVersion="Unknown"
+springapi=https://docs.spring.io/spring-framework/docs/current/javadoc-api
+springbootapi=https://docs.spring.io/spring-boot/docs/current/api
+micronautapi=https://docs.micronaut.io/latest/api
