--- a/spring-web-annotation/build.gradle
+++ b/spring-web-annotation/build.gradle
@@ -2,11 +2,14 @@ dependencies {
     compile project(":spring-annotation")
 
     testCompile project(":spring-web")
+    testCompile project(":spring-annotation")
     testCompile "org.springframework:spring-web:$springVersion"
     testCompile "io.micronaut:micronaut-inject-java:$micronautVersion"
     testCompile "io.micronaut:micronaut-http-client:$micronautVersion"
     testCompile "io.micronaut:micronaut-http-server-netty:$micronautVersion"
     testRuntime "io.micronaut.configuration:micronaut-hibernate-validator:$micronautVersion"
+    testRuntime "io.micronaut:micronaut-views:$micronautVersion"
+    testRuntime("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
 }
 
 //compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
