--- a/spring-web/build.gradle
+++ b/spring-web/build.gradle
@@ -5,5 +5,8 @@ dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
     compile project(":spring-context")
     compile "org.springframework:spring-web:$springVersion"
+    compile 'io.projectreactor:reactor-core:3.2.2.RELEASE'
     compile "io.micronaut:micronaut-http:$micronautVersion"
+    compileOnly "io.micronaut:micronaut-http-server-netty:$micronautVersion"
+    compileOnly "io.micronaut:micronaut-views:$micronautVersion"
 }
