--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -30,12 +30,14 @@ repositories {
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
     annotationProcessor "io.micronaut:micronaut-validation:$micronautVersion"
+    annotationProcessor "io.micronaut.configuration:micronaut-openapi:$micronautVersion"
     annotationProcessor "io.micronaut.spring:micronaut-spring-boot-annotation:1.0.0.BUILD-SNAPSHOT"
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:1.0.0.BUILD-SNAPSHOT"
+    compile "io.swagger.core.v3:swagger-annotations:2.0.4"
     compile "io.micronaut:micronaut-inject:$micronautVersion"
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("io.micronaut:micronaut-http-server:$micronautVersion")
-    runtime("io.micronaut:micronaut-http-server-netty:$micronautVersion")
+    compile("io.micronaut:micronaut-http-server-netty:$micronautVersion")
     runtime "ch.qos.logback:logback-classic:1.2.3"
 
     // uncomment the following to restore Spring Boot as the application executor
@@ -50,7 +52,9 @@ dependencies {
     testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
 }
 
+compileJava.options.compilerArgs += '-parameters'
+compileTestJava.options.compilerArgs += '-parameters'
+
 test {
     useJUnitPlatform()
 }
-
