Add GraalVM branch

--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -1,13 +1,10 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.1.0.RELEASE"
+    id "application"
+    id "com.github.johnrengelman.shadow" version "4.0.2"
+    id("org.springframework.boot") version "2.1.0.RELEASE" apply false
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "net.ltgt.apt" version "0.19"
-}
-
-bootJar {
-    baseName = 'greeting-service'
-    version =  '0.1.0'
 }
 
 repositories {
@@ -16,6 +13,7 @@ repositories {
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+mainClassName = "greeting.example.Application"
 
 ext {
     micronautVersion = "1.0.1.BUILD-SNAPSHOT"
@@ -27,18 +25,28 @@ repositories {
     maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
+
+
+dependencyManagement {
+    imports {
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+    }
+}
+
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
     annotationProcessor "io.micronaut:micronaut-validation:$micronautVersion"
     annotationProcessor "io.micronaut.configuration:micronaut-openapi:$micronautVersion"
     annotationProcessor "io.micronaut.spring:micronaut-spring-boot-annotation:1.0.0.BUILD-SNAPSHOT"
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:1.0.0.BUILD-SNAPSHOT"
+    compileOnly 'com.oracle.substratevm:svm:1.0.0-rc8'
     compile "io.swagger.core.v3:swagger-annotations:2.0.4"
     compile "io.micronaut:micronaut-inject:$micronautVersion"
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("io.micronaut:micronaut-http-server:$micronautVersion")
     compile("io.micronaut:micronaut-http-server-netty:$micronautVersion")
     runtime "ch.qos.logback:logback-classic:1.2.3"
+    runtime "io.micronaut:micronaut-graal:$micronautVersion"
 
     // uncomment the following to restore Spring Boot as the application executor
 //    runtime("org.springframework.boot:spring-boot-starter-tomcat")
@@ -51,6 +59,12 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
 }
+
+shadowJar {
+    mergeServiceFiles()
+}
+
+
 
 compileJava.options.compilerArgs += '-parameters'
 compileTestJava.options.compilerArgs += '-parameters'
