--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     annotationProcessor "io.micronaut.spring:micronaut-spring-boot-annotation:$micronautSpringVersion"
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.micronaut:micronaut-inject"
