--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
-micronautVersion=1.0.1.BUILD-SNAPSHOT
+micronautVersion=1.0.1
 groovyVersion=2.5.3
 grailsVersion=3.2.9
 springVersion=5.1.2.RELEASE
