--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -18,7 +18,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    micronautVersion = "1.0.1.BUILD-SNAPSHOT"
+    micronautVersion = "1.0.1"
     micronautSpringVersion = "1.0.0.BUILD-SNAPSHOT"
 }
 
