Use Spring annotations for example in client

--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     annotationProcessor "io.micronaut.spring:micronaut-spring-boot-annotation:$micronautSpringVersion"
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    testAnnotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
 
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.micronaut:micronaut-inject"
