--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "java"
+    id "idea"
     id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "net.ltgt.apt" version "0.19"
@@ -76,3 +77,6 @@ test {
 }
 
 bootRun.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
+
+idea.module.scopes.PROVIDED.plus += [configurations.annotationProcessor]
+idea.module.scopes.TEST.plus += [configurations.testAnnotationProcessor]
