Add hibernate validator to example

--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile("io.micronaut:micronaut-http-server-netty")
 
     runtime("io.micronaut:micronaut-views")
+    runtime "io.micronaut.configuration:micronaut-hibernate-validator"
     runtime("org.springframework.boot:spring-boot-starter-thymeleaf")
     runtime("io.micronaut.spring:micronaut-spring-web:$micronautSpringVersion")
     runtime "ch.qos.logback:logback-classic:1.2.3"
