--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
+    compileOnly "io.micronaut:micronaut-inject-java:$micronautVersion"
     compile "org.springframework:spring-context:$springVersion"
     compile "io.micronaut:micronaut-aop:$micronautVersion"
     compile "io.micronaut:micronaut-spring:$micronautVersion"
