Add micronaut-spring-web dependency

--- a/examples/greeting-service/pom.xml
+++ b/examples/greeting-service/pom.xml
@@ -75,6 +75,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>io.micronaut.spring</groupId>
+            <artifactId>micronaut-spring-web</artifactId>
+            <scope>runtime</scope>
+            <version>${micronaut.spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
