--- a/examples/greeting-service-kotlin/pom.xml
+++ b/examples/greeting-service-kotlin/pom.xml
@@ -74,6 +74,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>io.micronaut.spring</groupId>
+            <artifactId>micronaut-spring-web</artifactId>
+            <scope>runtime</scope>
+            <version>${micronaut.spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.9.7</version>
