--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -21,7 +21,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    micronautVersion = "1.0.1"
+    micronautVersion = "1.0.2"
     micronautSpringVersion = "1.0.0.M1"
 }
 
@@ -65,7 +65,7 @@ dependencies {
 //    runtime 'javax.servlet:javax.servlet-api:4.0.0'
 
     testCompile("io.micronaut:micronaut-http-client")
-    testCompile("io.micronaut.test:micronaut-test-junit5:1.0.0.RC2")
+    testCompile("io.micronaut.test:micronaut-test-junit5:1.0.1")
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
