--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testAnnotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
 
+    compileOnly 'com.oracle.substratevm:svm:1.0.0-rc8'
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.micronaut:micronaut-inject"
     compile("org.springframework.boot:spring-boot-starter-web")
