--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -1,4 +1,9 @@
+plugins {
+    id "net.ltgt.apt" version "0.19"
+}
+
 dependencies {
+    annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
     compile project(":spring-context")
     compile "org.springframework.boot:spring-boot:$springBootVersion"
     compileOnly "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
