--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 projectVersion=1.0.0.BUILD-SNAPSHOT
 micronautVersion=1.0.4
+micronautDocsVersion=1.0.0.RC1
 groovyVersion=2.5.6
 grailsVersion=3.2.9
 springVersion=5.1.5.RELEASE
