--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -21,8 +21,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    micronautVersion = "1.0.2"
-    micronautSpringVersion = "1.0.0.M1"
+    micronautVersion = "1.0.4"
+    micronautSpringVersion = "1.0.0.RC1"
 }
 
 repositories {
@@ -43,7 +43,6 @@ dependencies {
     annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     annotationProcessor "io.micronaut.spring:micronaut-spring-boot-annotation:$micronautSpringVersion"
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testAnnotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
 
     compile "io.swagger.core.v3:swagger-annotations"
