--- a/examples/greeting-service/pom.xml
+++ b/examples/greeting-service/pom.xml
@@ -5,15 +5,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>example</groupId>
     <artifactId>greeting-service</artifactId>
     <version>0.1</version>
     <properties>
-        <micronaut.version>1.0.4</micronaut.version>
-        <micronaut.spring.version>1.0.0.RC1</micronaut.spring.version>
+        <micronaut.version>1.1.0</micronaut.version>
+        <micronaut.spring.version>1.0.0</micronaut.spring.version>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>greeting.example.Application</exec.mainClass>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>io.micronaut.test</groupId>
             <artifactId>micronaut-test-junit5</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
