--- a/examples/greeting-service-kotlin/build.gradle
+++ b/examples/greeting-service-kotlin/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "org.springframework.boot" version "2.1.0.RELEASE"
-    id "org.jetbrains.kotlin.jvm" version "1.2.61"
-    id "org.jetbrains.kotlin.kapt" version "1.2.61"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.2.61"	
+    id "org.springframework.boot" version "2.1.4.RELEASE"
+    id "org.jetbrains.kotlin.jvm" version "1.3.30"
+    id "org.jetbrains.kotlin.kapt" version "1.3.30"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.30"	
 }
 
 apply plugin:"application"
@@ -18,8 +18,8 @@ repositories {
 }
 
 ext {
-    micronautVersion = "1.0.4"
-    micronautSpringVersion = "1.0.0.RC1"
+    micronautVersion = "1.1.0"
+    micronautSpringVersion = "1.0.0"
 }
 
 dependencyManagement {
@@ -37,8 +37,8 @@ dependencies {
     kapt "io.micronaut:micronaut-inject-java"
     kapt "io.micronaut:micronaut-validation"
     kapt "io.micronaut.configuration:micronaut-openapi"
-    kapt "io.micronaut.spring:micronaut-spring-boot-annotation:$micronautSpringVersion"
-    kapt "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
+    kapt "io.micronaut.spring:micronaut-spring-boot-annotation"
+    kapt "io.micronaut.spring:micronaut-spring-web-annotation"
 
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.micronaut:micronaut-inject"
@@ -53,18 +53,18 @@ dependencies {
     runtime("io.micronaut:micronaut-views")
     runtime "io.micronaut.configuration:micronaut-hibernate-validator"
     runtime("org.springframework.boot:spring-boot-starter-thymeleaf")
-    runtime("io.micronaut.spring:micronaut-spring-web:$micronautSpringVersion")
+    runtime("io.micronaut.spring:micronaut-spring-web")
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4.1"
+    runtime "com.fasterxml.jackson.module:jackson-module-kotlin"
     runtime "ognl:ognl:3.1.12"
     
-    kaptTest "io.micronaut.spring:micronaut-spring-web-annotation:$micronautSpringVersion"
+    kaptTest "io.micronaut.spring:micronaut-spring-web-annotation:"
     kaptTest "io.micronaut:micronaut-inject-java"
 
-    testCompile("io.micronaut.test:micronaut-test-junit5:1.0.1")
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
+    testCompile("io.micronaut.test:micronaut-test-junit5:1.0.2")
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.3.0"
     testCompile "org.jetbrains.spek:spek-api:1.1.5"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.0"
 }
 
 
