--- a/examples/greeting-service/pom.xml
+++ b/examples/greeting-service/pom.xml
@@ -5,15 +5,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.1.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>example</groupId>
     <artifactId>greeting-service</artifactId>
     <version>0.1</version>
     <properties>
-        <micronaut.version>1.1.0</micronaut.version>
-        <micronaut.spring.version>1.0.0</micronaut.spring.version>
+        <micronaut.version>1.2.3</micronaut.version>
+        <micronaut.spring.version>1.0.1</micronaut.spring.version>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>greeting.example.Application</exec.mainClass>
@@ -143,7 +143,7 @@
                             <path>
                                 <groupId>io.micronaut.configuration</groupId>
                                 <artifactId>micronaut-openapi</artifactId>
-                                <version>${micronaut.version}</version>
+                                <version>1.2.0</version>
                             </path>
                             <path>
                                 <groupId>io.micronaut.spring</groupId>
@@ -196,4 +196,10 @@
             </plugins>
         </pluginManagement>
     </build>
+    <repositories>
+        <repository>
+            <id>jcenter.bintray.com</id>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 </project>
