--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=1.0.2.BUILD-SNAPSHOT
+projectVersion=1.0.2
 micronautVersion=1.0.4
 micronautDocsVersion=1.0.0.RC1
 groovyVersion=2.5.6
