--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,11 +2,11 @@ name-template: Micronaut Data $NEXT_PATCH_VERSION
 tag-template: v$NEXT_PATCH_VERSION
 categories:
   - title: 🚀 Features
-    label: "type: enhancement"
+    label: "enhancement"
   - title: 🐛 Bug Fixes
-    label: "type: bug"
+    label: "bug"
   - title: 🛠 Dependency upgrades
-    label: "type: dependencies"
+    label: "dependencies"
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   ## Changes
