--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,12 +14,12 @@ jobs:
         java: ['1.8', '11.0.4']
     steps:
     - uses: actions/checkout@v1
-#     - uses: actions/cache@v1
-#       with:
-#         path: ~/.gradle/caches
-#         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-#         restore-keys: |
-#           ${{ runner.os }}-gradle-
+    - uses: actions/cache@v1
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
