--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=2.0.0.BUILD-SNAPSHOT
+projectVersion=2.0.0
 micronautVersion=1.3.3
 micronautBuildVersion=1.0.0
 micronautDocsVersion=1.0.22
