--- a/examples/greeting-service/build.gradle
+++ b/examples/greeting-service/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
     id "idea"
-    id "org.springframework.boot" version "2.1.0.RELEASE"
+    id "org.springframework.boot" version "2.2.3.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "net.ltgt.apt" version "0.19"
     id "net.ltgt.apt-idea" version "0.19"
@@ -21,13 +21,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    micronautVersion = "1.1.0"
-    micronautSpringVersion = "1.0.0"
+    micronautVersion = "1.3.4"
+    micronautSpringVersion = "2.0.0"
 }
 
 repositories {
-    mavenLocal()
-    maven { url "https://dl.bintray.com/micronaut/core-releases-local" }
     jcenter()
 }
 
@@ -37,6 +35,7 @@ dependencyManagement {
     }
 }
 
+ext['micronaut.spring.version'] = micronautSpringVersion
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
@@ -45,28 +44,29 @@ dependencies {
     annotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation"
     testAnnotationProcessor "io.micronaut.spring:micronaut-spring-web-annotation"
 
-    compile "io.swagger.core.v3:swagger-annotations"
-    compile "io.micronaut:micronaut-inject"
-    compile("org.springframework.boot:spring-boot-starter-web")
-    
-    compile("io.micronaut:micronaut-http-server")    
-    compile("io.micronaut:micronaut-http-server-netty")
+    implementation "io.swagger.core.v3:swagger-annotations"
+    implementation "io.micronaut:micronaut-inject"
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation "io.micronaut:micronaut-validation"
+    implementation("io.micronaut:micronaut-http-server")    
+    implementation("io.micronaut:micronaut-http-server-netty")
 
-    runtime("io.micronaut:micronaut-views")
-    runtime("org.springframework.boot:spring-boot-starter-thymeleaf")
-    runtime("io.micronaut.spring:micronaut-spring-web")
-    runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime "ognl:ognl:3.1.12"
+    implementation("io.micronaut:micronaut-views")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("io.micronaut.spring:micronaut-spring-web")
+    runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
+    runtimeOnly "ognl:ognl:3.1.12"
 
     // uncomment the following to restore Spring Boot as the application executor
 //    runtime("org.springframework.boot:spring-boot-starter-tomcat")
 //    runtime 'javax.servlet:javax.servlet-api:4.0.0'
 
-    testCompile("io.micronaut:micronaut-http-client")
-    testCompile("io.micronaut.test:micronaut-test-junit5:1.0.2")
-    testCompile "io.micronaut:micronaut-inject-java"
-    testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.0"
+    testImplementation("io.micronaut:micronaut-http-client")
+    testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testImplementation "io.micronaut:micronaut-inject-java"
+    testImplementation "org.mockito:mockito-junit-jupiter:2.22.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
 }
 
@@ -76,8 +76,6 @@ compileTestJava.options.compilerArgs += '-parameters'
 test {
     useJUnitPlatform()
 }
-
-bootRun.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
 idea.module.scopes.PROVIDED.plus += [configurations.annotationProcessor]
 idea.module.scopes.TEST.plus += [configurations.testAnnotationProcessor]
