--- a/examples/greeting-service/pom.xml
+++ b/examples/greeting-service/pom.xml
@@ -5,15 +5,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.2.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>example</groupId>
     <artifactId>greeting-service</artifactId>
     <version>0.1</version>
     <properties>
-        <micronaut.version>1.2.3</micronaut.version>
-        <micronaut.spring.version>1.0.1</micronaut.spring.version>
+        <micronaut.version>1.3.4</micronaut.version>
+        <micronaut.spring.version>2.0.0</micronaut.spring.version>
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>greeting.example.Application</exec.mainClass>
@@ -45,6 +45,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>       
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+            <version>3.1.12</version>
+        </dependency>           
+        <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-validation</artifactId>
             <scope>compile</scope>
@@ -70,15 +79,22 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.micronaut.configuration</groupId>
-            <artifactId>micronaut-hibernate-validator</artifactId>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-views</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.micronaut.spring</groupId>
             <artifactId>micronaut-spring-web</artifactId>
             <scope>runtime</scope>
+            <version>${micronaut.spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.micronaut.spring</groupId>
+            <artifactId>micronaut-spring-context</artifactId>
+            <scope>runtime</scope>
+            <version>${micronaut.spring.version}</version>
+        </dependency>        
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -88,7 +104,6 @@
         <dependency>
             <groupId>io.micronaut.test</groupId>
             <artifactId>micronaut-test-junit5</artifactId>
-            <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
