--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=2.0.1
+projectVersion=2.0.2.BUILD-SNAPSHOT
 micronautVersion=1.3.3
 micronautBuildVersion=1.0.0
 micronautDocsVersion=1.0.22
