Upgrade to Micronaut 2.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 projectVersion=2.0.2.BUILD-SNAPSHOT
-micronautVersion=1.3.3
+micronautVersion=2.0.0.M3
 micronautBuildVersion=1.0.0
 micronautDocsVersion=1.0.22
 groovyVersion=2.5.10
