--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     api "io.micronaut:micronaut-aop:$micronautVersion"
     api "io.micronaut:micronaut-inject:$micronautVersion"
     implementation "io.micronaut:micronaut-spring:$micronautVersion"
+    implementation "io.micronaut.cache:micronaut-cache-core"
 
     testImplementation "io.micronaut:micronaut-runtime:$micronautVersion"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
