Update to Spring Boot 2.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
-projectVersion=2.0.2.BUILD-SNAPSHOT
-micronautVersion=1.3.3
-micronautBuildVersion=1.0.0
-micronautDocsVersion=1.0.22
-groovyVersion=2.5.10
-springVersion=5.2.3.RELEASE
-springBootVersion=2.2.4.RELEASE
+projectVersion=2.1.0.BUILD-SNAPSHOT
+micronautVersion=1.3.5
+micronautBuildVersion=1.1.5
+micronautTestVersion=1.1.5
+micronautDocsVersion=1.0.23
+groovyVersion=2.5.11
+springVersion=5.2.6.RELEASE
+springBootVersion=2.3.0.RELEASE
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring 
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 githubBranch=master
 junitVersion=5.1.0
-spockVersion=1.2-groovy-2.5
+spockVersion=1.3-groovy-2.5
 developers=Graeme Rocher
 # Needed only for documentation
 grailsVersion=3.3.8
