Correct BOM update

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,13 @@ title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring 
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
+# This project's branch
 githubBranch=master
+# Micronaut core branch for BOM pull requests
+githubCoreBranch=master
+bomProperty=micronautSpringVersion
+# If needed, set additional properties
+bomProperties=springVersion,springBootVersion
 junitVersion=5.1.0
 spockVersion=1.3-groovy-2.5
 developers=Graeme Rocher
