--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=2.1.0.RC1
+projectVersion=2.1.0.BUILD-SNAPSHOT
 micronautVersion=1.3.5
 micronautBuildVersion=1.1.5
 micronautTestVersion=1.1.5
