Add bean post processor docs

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -11,4 +11,6 @@ springToMicronaut:
   micronautClient: Using Micronaut's HTTP Client
 springParentContext:
   title: Using Micronaut Parent Context
+beanPostProcessor:
+  title: Using a Bean Post Processor
 repository: Repository
