set github core branch to 2.0.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-spring
 # This project's branch
 githubBranch=master
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=master
+githubCoreBranch=2.0.x
 bomProperty=micronautSpringVersion
 # If needed, set additional properties
 bomProperties=springVersion,springBootVersion
