--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -1,4 +1,5 @@
 introduction: Introduction
+releaseHistory: Release History
 springToMicronaut:
   title: Compile Time Spring Annotation Support
   springToMicronautStart: Build Configuration
