Use micronaut-spring from the current project (#128)
* Use micronaut-spring from the current project

* Update spring-annotation/build.gradle

to reference micronaut-spring from the current project.

(cherry picked from commit 5f027cbb369acd24cfd6136c848ef74467d8a7fd)

--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     api "org.springframework:spring-context:$springVersion"
     api "io.micronaut:micronaut-aop:$micronautVersion"
     api "io.micronaut:micronaut-inject:$micronautVersion"
-    implementation "io.micronaut:micronaut-spring:$micronautVersion"
+    implementation project(":spring")
 
     testImplementation "io.micronaut:micronaut-runtime:$micronautVersion"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
