Remove ignore on tests. Upgrade spring and boot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 projectVersion=3.0.0.BUILD-SNAPSHOT
-micronautVersion=2.0.2
-micronautTestVersion=1.2.3
+micronautVersion=2.1.4
+micronautTestVersion=2.2.1
 micronautDocsVersion=1.0.23
 groovyVersion=3.0.3
-springVersion=5.2.9.RELEASE
-springBootVersion=2.3.3.RELEASE
+springVersion=5.3.1
+springBootVersion=2.4.0
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring 
 projectUrl=http://micronaut.io
