--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -1,18 +1,18 @@
 dependencies {
-    annotationProcessor "io.micronaut:micronaut-inject-java"
-    
+    annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
+
     api "org.springframework:spring-core:$springVersion"
     api "org.springframework:spring-tx:$springVersion"
     api "org.springframework:spring-context:$springVersion"
     api "io.micronaut:micronaut-inject:$micronautVersion"
     api "io.micronaut:micronaut-aop:$micronautVersion"
 
-    compileOnly "org.springframework:spring-jdbc"
-    
-    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
-    testImplementation "io.micronaut:micronaut-runtime"
-    testImplementation "io.micronaut:micronaut-inject-groovy"
-    
+    compileOnly "org.springframework:spring-jdbc:$springVersion"
+
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
+    testImplementation "io.micronaut:micronaut-runtime:$micronautVersion"
+    testImplementation "io.micronaut:micronaut-inject-groovy:$micronautVersion"
+
     testImplementation "org.spockframework:spock-spring:$spockVersion"
     testImplementation "org.springframework:spring-test:$springVersion"
 }
