--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,20 @@ subprojects { Project subproject ->
         testImplementation("org.spockframework:spock-core:${spockVersion}") {
             exclude module:'groovy-all'
         }
-        testImplementation "io.micronaut.test:micronaut-test-spock:$micronautTestVersion"        
-    }    
+        testImplementation "io.micronaut.test:micronaut-test-spock:$micronautTestVersion"
+    }
+
+    subproject.configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            String group = details.requested.group
+            if (group == 'org.springframework') {
+                details.useVersion(springVersion)
+            }
+            if (group == 'org.springframework.boot') {
+                details.useVersion(springBootVersion)
+            }
+        }
+    }
 }
 
 apply plugin: "io.micronaut.build.docs"
