--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ subprojects { Project subproject ->
     apply plugin: "io.micronaut.build.dependency-updates"
     apply plugin: "io.micronaut.build.publishing"
 
+    repositories {
+        mavenLocal()
+    }
+
     dependencies {
         testImplementation("org.spockframework:spock-core:${spockVersion}") {
             exclude module:'groovy-all'
